# kube-autorollout

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/: release.yml
.github/workflows/: auto-label.yaml  create-publish.yaml  docker-publish.yml  helm-publish.yml
charts/kube-autorollout/: Chart.yaml  README.md  values.yaml
charts/kube-autorollout/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
src/: config.rs  controller.rs  image_reference.rs  main.rs  oci_registry.rs  rollout.rs  secret_string.rs  state.rs  webserver.rs
tests/e2e/: deployment-template.yaml
