[package]
name = "kube-autorollout"
version = "0.4.1"
edition = "2024"
authors = ["juv"]
description = "A lightweight Kubernetes controller that automatically triggers Kubernetes deployment rollouts when container image digests change, ensuring your applications stay up-to-date without manual intervention 🚀"
license = "Apache-2.0"
repository = "https://github.com/juv/kube-autorollout"
homepage = "https://github.com/juv/kube-autorollout"
keywords = ["kubernetes", "docker", "devops", "gitops", "container"]
readme = "README.md"

[profile.release]
opt-level = 3          # https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
lto = true             # https://doc.rust-lang.org/cargo/reference/profiles.html#lto
strip = "symbols"      # https://doc.rust-lang.org/cargo/reference/profiles.html#strip

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
tokio-util = { version = "0.7.17" }
axum = "0.8.6"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls-native-roots", "system-proxy"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
globset = "0.4"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3"